header fixes: added comments to less files, refractored code, data-mage-init instead inline js, pixel perfect fixes, data-atributes instead classes with js prefix, translations, path instead href in links

--- a/app/design/frontend/Project/Default/i18n/he_IL.csv
+++ b/app/design/frontend/Project/Default/i18n/he_IL.csv
@@ -1,5 +1,7 @@
-"Create an Account","התחברות"
-"Sign In","הרשמה"
-"Search entire store here...","חפש"
 "Account","חשבון"
+"Create an Account","התחברות"
+"Search","לחפש"
+"Search entire store here...","חפש"
+"Sign In","הרשמה"
 "Menu","תפריט"
+"Compare Products","השווה מוצרים"
