added footer cards

--- a/app/design/frontend/Project/Default/i18n/he_IL.csv
+++ b/app/design/frontend/Project/Default/i18n/he_IL.csv
@@ -1,7 +1,16 @@
 "Account","חשבון"
+"Compare Products","השווה מוצרים"
 "Create an Account","התחברות"
+"Details","לפרטים"
+"Enjoy unique benefits all year round!","ותיהני מהטבות ייחודיות כל השנה!"
+"Enter your email address","כתובת דוא״ל"
+"I confirm receipt of promotional information, promotions and benefits via email","הנני מאשרת קבלת מידע שיווקי, מבצעים והטבות באמצעות דוא״ל"
+"Join the club","הצטרפי למועדון"
+"Menu","תפריט"
+"Registration","הרשמה"
 "Search","לחפש"
 "Search entire store here...","חפש"
 "Sign In","הרשמה"
-"Menu","תפריט"
-"Compare Products","השווה מוצרים"
+"Subscribe to our newsletter for updates on promotions and benefits.","הירשמי לניוזלטר שלנו לקבלת עדכונים על מבצעים והטבות."
+"%1 items","%1 פריטים"
+"1 item","1 פריט"
