--- a/app/design/frontend/Project/Default/i18n/he_IL.csv
+++ b/app/design/frontend/Project/Default/i18n/he_IL.csv
@@ -1,4 +1,8 @@
+"%1 items","%1 פריטים"
+"1 item","1 פריט"
 "Account","חשבון"
+"Add to Cart","הוסיפי לסל"
+"Add to Wish List","הוסיפי למועדפים"
 "Compare Products","השווה מוצרים"
 "Create an Account","התחברות"
 "Details","לפרטים"
@@ -8,9 +12,8 @@
 "Join the club","הצטרפי למועדון"
 "Menu","תפריט"
 "Registration","הרשמה"
-"Search","לחפש"
 "Search entire store here...","חפש"
+"Search","לחפש"
+"Shipping and returns","משלוחים והחזרות"
 "Sign In","הרשמה"
 "Subscribe to our newsletter for updates on promotions and benefits.","הירשמי לניוזלטר שלנו לקבלת עדכונים על מבצעים והטבות."
-"%1 items","%1 פריטים"
-"1 item","1 פריט"
