product page: added product labels, started size template on configurable-product page, less fixes

--- a/app/design/frontend/Project/Default/i18n/he_IL.csv
+++ b/app/design/frontend/Project/Default/i18n/he_IL.csv
@@ -3,6 +3,7 @@
 "Account","חשבון"
 "Add to Cart","הוסיפי לסל"
 "Add to Wish List","הוסיפי למועדפים"
+"Club members accumulate %1 points in purchasing this product.","חברי מועדון צוברים %1 נקודות ברכישת מוצר זה."
 "Compare Products","השווה מוצרים"
 "Create an Account","התחברות"
 "Details","לפרטים"
@@ -11,9 +12,14 @@
 "I confirm receipt of promotional information, promotions and benefits via email","הנני מאשרת קבלת מידע שיווקי, מבצעים והטבות באמצעות דוא״ל"
 "Join the club","הצטרפי למועדון"
 "Menu","תפריט"
+"New collection","קולקציה חדשה"
+"New on the shelf","חדש על המדף"
 "Registration","הרשמה"
+"Sale","מְכִירָה"
 "Search entire store here...","חפש"
 "Search","לחפש"
 "Shipping and returns","משלוחים והחזרות"
 "Sign In","הרשמה"
+"Size chart","טבלת מידות"
 "Subscribe to our newsletter for updates on promotions and benefits.","הירשמי לניוזלטר שלנו לקבלת עדכונים על מבצעים והטבות."
+"We found other products you might like!","מוצרים נוספים"
