--- a/app/design/frontend/Project/Default/i18n/he_IL.csv
+++ b/app/design/frontend/Project/Default/i18n/he_IL.csv
@@ -23,3 +23,8 @@
 "Size chart","טבלת מידות"
 "Subscribe to our newsletter for updates on promotions and benefits.","הירשמי לניוזלטר שלנו לקבלת עדכונים על מבצעים והטבות."
 "We found other products you might like!","מוצרים נוספים"
+"View and Edit Cart","הצג וערוך עגלה"
+"Proceed to Checkout","לבדוק"
+"Cart Subtotal","סך הכל"
+"Remove","הסר"
+"Remove item","הסר פריט"
