Category-page:modified filters to accordion and to slide-toggle in mobile, added fake-title (for removing), removed sidebar-additional, added show-more button template

--- a/app/design/frontend/Project/Default/i18n/he_IL.csv
+++ b/app/design/frontend/Project/Default/i18n/he_IL.csv
@@ -20,11 +20,12 @@
 "Search","לחפש"
 "Shipping and returns","משלוחים והחזרות"
 "Sign In","הרשמה"
-"Size chart","טבלת מידות"
-"Subscribe to our newsletter for updates on promotions and benefits.","הירשמי לניוזלטר שלנו לקבלת עדכונים על מבצעים והטבות."
+"Size chart","טבלת מידות" "Subscribe to our newsletter for updates on promotions and benefits.","הירשמי לניוזלטר שלנו לקבלת עדכונים על מבצעים והטבות."
 "We found other products you might like!","מוצרים נוספים"
 "View and Edit Cart","הצג וערוך עגלה"
 "Proceed to Checkout","לבדוק"
 "Cart Subtotal","סך הכל"
 "Remove","הסר"
 "Remove item","הסר פריט"
+"Shopping Options","אפשרויות קניות",
+"Position","עמדה"
