my-account-page

--- a/app/design/frontend/Project/Default/i18n/he_IL.csv
+++ b/app/design/frontend/Project/Default/i18n/he_IL.csv
@@ -1,31 +1,57 @@
 "%1 items","%1 פריטים"
 "1 item","1 פריט"
+"Account Information","פרטי חשבון"
 "Account","חשבון"
 "Add to Cart","הוסיפי לסל"
 "Add to Wish List","הוסיפי למועדפים"
+"Address Book","פנקס כתובות"
+"Billing Agreements", "הסכמי חיוב"
+"Cart Subtotal","סך הכל"
+"Change Password","שנה סיסמה"
 "Club members accumulate %1 points in purchasing this product.","חברי מועדון צוברים %1 נקודות ברכישת מוצר זה."
 "Compare Products","השווה מוצרים"
+"Contact Information","מידע ליצירת קשר"
 "Create an Account","התחברות"
+"Default Billing Address","כתובת ברירת המחדל לחיוב"
+"Default Shipping Address","כתובת המשלוח של ברירת המחדל"
 "Details","לפרטים"
+"Edit Address","ערוך כתובת",
+"Edit", "ערוך"
 "Enjoy unique benefits all year round!","ותיהני מהטבות ייחודיות כל השנה!"
 "Enter your email address","כתובת דוא״ל"
 "I confirm receipt of promotional information, promotions and benefits via email","הנני מאשרת קבלת מידע שיווקי, מבצעים והטבות באמצעות דוא״ל"
 "Join the club","הצטרפי למועדון"
+"Manage Addresses", "ניהול כתובות"
 "Menu","תפריט"
+"My Account","החשבון שלי"
+"My Downloadable Products","מוצרים להורדה שלי"
+"My Orders","ההוראות שלי"
+"My Product Reviews","סקירות המוצר שלי"
+"My Wish List","רשימת המשאלות שלי"
 "New collection","קולקציה חדשה"
 "New on the shelf","חדש על המדף"
+"Newsletter Subscriptions","מנויים לניוזלטר"
+"Newsletters","ידיעונים"
+"Position","עמדה"
+"Proceed to Checkout","לבדוק"
 "Registration","הרשמה"
+"Remove item","הסר פריט"
+"Remove","הסר"
 "Sale","מְכִירָה"
 "Search entire store here...","חפש"
 "Search","לחפש"
 "Shipping and returns","משלוחים והחזרות"
-"Sign In","הרשמה"
-"Size chart","טבלת מידות" "Subscribe to our newsletter for updates on promotions and benefits.","הירשמי לניוזלטר שלנו לקבלת עדכונים על מבצעים והטבות."
-"We found other products you might like!","מוצרים נוספים"
-"View and Edit Cart","הצג וערוך עגלה"
-"Proceed to Checkout","לבדוק"
-"Cart Subtotal","סך הכל"
-"Remove","הסר"
-"Remove item","הסר פריט"
 "Shopping Options","אפשרויות קניות",
-"Position","עמדה"
+"Sign In","הרשמה"
+"Sign Out","צא"
+"Size chart","טבלת מידות"
+"Stored Payment Methods","שיטות תשלום מאוחסנות"
+"Subscribe to our newsletter for updates on promotions and benefits.","הירשמי לניוזלטר שלנו לקבלת עדכונים על מבצעים והטבות."
+"Thank you for registering with Main Website Store.","תודה על ההרשמה לאתר הראשי של האתר."
+"View and Edit Cart","הצג וערוך עגלה"
+"We found other products you might like!","מוצרים נוספים"
+"You aren't subscribed to our newsletter.","אינך מנוי לניוזלטר שלנו."
+"You have no items in your wish list.","אין לך פריטים להשוואה."
+"You have no items to compare.", "אין לך פריטים להשוואה."
+"You have not set a default billing address.","לא הגדרת כתובת ברירת מחדל לחיוב."
+"You have not set a default shipping address.","לא הגדרת כתובת למשלוח ברירת מחדל."
