--- a/app/design/frontend/Project/Default/i18n/he_IL.csv
+++ b/app/design/frontend/Project/Default/i18n/he_IL.csv
@@ -3,6 +3,7 @@
 "Account Information","פרטי חשבון"
 "Account","חשבון"
 "Add to Cart","הוסיפי לסל"
+"Add to Favorites","הוסף למועדפים"
 "Add to Wish List","הוסיפי למועדפים"
 "Address Book","פנקס כתובות"
 "Billing Agreements", "הסכמי חיוב"
@@ -20,6 +21,7 @@
 "Enjoy unique benefits all year round!","ותיהני מהטבות ייחודיות כל השנה!"
 "Enter your email address","כתובת דוא״ל"
 "I confirm receipt of promotional information, promotions and benefits via email","הנני מאשרת קבלת מידע שיווקי, מבצעים והטבות באמצעות דוא״ל"
+"Item","פריט"
 "Join the club","הצטרפי למועדון"
 "Manage Addresses", "ניהול כתובות"
 "Menu","תפריט"
@@ -32,8 +34,11 @@
 "New on the shelf","חדש על המדף"
 "Newsletter Subscriptions","מנויים לניוזלטר"
 "Newsletters","ידיעונים"
+"Please select a region, state or province.","בחר אזור"
 "Position","עמדה"
+"Price","מחיר"
 "Proceed to Checkout","לבדוק"
+"Qty","כמות"
 "Registration","הרשמה"
 "Remove item","הסר פריט"
 "Remove","הסר"
@@ -41,12 +46,16 @@
 "Search entire store here...","חפש"
 "Search","לחפש"
 "Shipping and returns","משלוחים והחזרות"
+"Shopping Cart","עגלת קניות"
 "Shopping Options","אפשרויות קניות",
+"Show more","להראות יותר"
 "Sign In","הרשמה"
 "Sign Out","צא"
 "Size chart","טבלת מידות"
 "Stored Payment Methods","שיטות תשלום מאוחסנות"
 "Subscribe to our newsletter for updates on promotions and benefits.","הירשמי לניוזלטר שלנו לקבלת עדכונים על מבצעים והטבות."
+"Subtotal","סיכום ביניים"
+"Summary","סיכום הזמנה"
 "Thank you for registering with Main Website Store.","תודה על ההרשמה לאתר הראשי של האתר."
 "View and Edit Cart","הצג וערוך עגלה"
 "We found other products you might like!","מוצרים נוספים"
