forgot-password page

--- a/app/design/frontend/Project/Default/i18n/he_IL.csv
+++ b/app/design/frontend/Project/Default/i18n/he_IL.csv
@@ -64,3 +64,7 @@
 "You have no items to compare.", "אין לך פריטים להשוואה."
 "You have not set a default billing address.","לא הגדרת כתובת ברירת מחדל לחיוב."
 "You have not set a default shipping address.","לא הגדרת כתובת למשלוח ברירת מחדל."
+"Go back","תחזור"
+"Please enter your email address below to receive a password reset link.","הזן את כתובת האימייל שלך למטה כדי לקבל קישור לאיפוס סיסמה."
+"Email","דוא"ל"
+"Reset My Password","אפס את הסיסמה שלי"
